--- a/Sai_Learning.ipynb
+++ b/Sai_Learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Sai Learning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNmBbp9TtW0GDcfv1PQgcik",
+      "authorship_tag": "ABX9TyNcHEg34MVAwyEhUaD7CzGy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -634,18 +634,33 @@
         "print(df.describe())\n",
         "df.drop(['size'], axis = 1, inplace=True)\n",
         "print(df.columns)\n",
-        "df.rename({'time':'udf_time'}, inplace=True)\n",
+        "df.rename(columns = {'time':'udf_time'}, inplace=True)\n",
         "print(df.head())\n",
-        "df.isnull().sum() # no of null values present in each column"
+        "df.isnull().sum() # no of null values present in each column\n",
+        "\n",
+        "print('filtering')\n",
+        "print(df[(df['sex'] == 'Male')])\n",
+        "print(df[(df['sex'].str.lower().str.strip() == 'male') & (df['smoker'].str.lower().str.slice(0,2) == 'no')])\n",
+        "\n",
+        "print('sorting')\n",
+        "print(df.sort_values(by=['sex', 'smoker', 'tip'], ascending=[False, False, True]))\n",
+        "\n",
+        "df ['smoker_value'] = df['smoker'].map({'No':'No_ Value', 'Yes': 'Yes_value'})\n",
+        "\n",
+        "print(df.head())\n",
+        "print(df.groupby('sex').count()['total_bill'])\n",
+        "\n",
+        "\n",
+        "print(df.groupby('sex').sum()['total_bill'])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZJxwRJnA9mOk",
-        "outputId": "0e88d86c-9f51-427c-eedf-bc4671b98e35"
+        "outputId": "8de04060-9c7e-49f6-d4dc-f68440258c9a"
       },
-      "execution_count": 135,
+      "execution_count": 184,
       "outputs": [
         {
           "output_type": "stream",
@@ -689,29 +704,71 @@
             "75%     24.127500    3.562500    3.000000\n",
             "max     50.810000   10.000000    6.000000\n",
             "Index(['total_bill', 'tip', 'sex', 'smoker', 'day', 'time'], dtype='object')\n",
-            "   total_bill   tip     sex smoker  day    time\n",
-            "0       16.99  1.01  Female     No  Sun  Dinner\n",
-            "1       10.34  1.66    Male     No  Sun  Dinner\n",
-            "2       21.01  3.50    Male     No  Sun  Dinner\n",
-            "3       23.68  3.31    Male     No  Sun  Dinner\n",
-            "4       24.59  3.61  Female     No  Sun  Dinner\n"
+            "   total_bill   tip     sex smoker  day udf_time\n",
+            "0       16.99  1.01  Female     No  Sun   Dinner\n",
+            "1       10.34  1.66    Male     No  Sun   Dinner\n",
+            "2       21.01  3.50    Male     No  Sun   Dinner\n",
+            "3       23.68  3.31    Male     No  Sun   Dinner\n",
+            "4       24.59  3.61  Female     No  Sun   Dinner\n",
+            "filtering\n",
+            "     total_bill   tip   sex smoker  day udf_time\n",
+            "1         10.34  1.66  Male     No  Sun   Dinner\n",
+            "2         21.01  3.50  Male     No  Sun   Dinner\n",
+            "3         23.68  3.31  Male     No  Sun   Dinner\n",
+            "5         25.29  4.71  Male     No  Sun   Dinner\n",
+            "6          8.77  2.00  Male     No  Sun   Dinner\n",
+            "..          ...   ...   ...    ...  ...      ...\n",
+            "236       12.60  1.00  Male    Yes  Sat   Dinner\n",
+            "237       32.83  1.17  Male    Yes  Sat   Dinner\n",
+            "239       29.03  5.92  Male     No  Sat   Dinner\n",
+            "241       22.67  2.00  Male    Yes  Sat   Dinner\n",
+            "242       17.82  1.75  Male     No  Sat   Dinner\n",
+            "\n",
+            "[157 rows x 6 columns]\n",
+            "     total_bill   tip   sex smoker  day udf_time\n",
+            "1         10.34  1.66  Male     No  Sun   Dinner\n",
+            "2         21.01  3.50  Male     No  Sun   Dinner\n",
+            "3         23.68  3.31  Male     No  Sun   Dinner\n",
+            "5         25.29  4.71  Male     No  Sun   Dinner\n",
+            "6          8.77  2.00  Male     No  Sun   Dinner\n",
+            "..          ...   ...   ...    ...  ...      ...\n",
+            "232       11.61  3.39  Male     No  Sat   Dinner\n",
+            "233       10.77  1.47  Male     No  Sat   Dinner\n",
+            "235       10.07  1.25  Male     No  Sat   Dinner\n",
+            "239       29.03  5.92  Male     No  Sat   Dinner\n",
+            "242       17.82  1.75  Male     No  Sat   Dinner\n",
+            "\n",
+            "[97 rows x 6 columns]\n",
+            "sorting\n",
+            "     total_bill    tip     sex smoker   day udf_time\n",
+            "111        7.25   1.00  Female     No   Sat   Dinner\n",
+            "0         16.99   1.01  Female     No   Sun   Dinner\n",
+            "135        8.51   1.25  Female     No  Thur    Lunch\n",
+            "146       18.64   1.36  Female     No  Thur    Lunch\n",
+            "57        26.41   1.50  Female     No   Sat   Dinner\n",
+            "..          ...    ...     ...    ...   ...      ...\n",
+            "172        7.25   5.15    Male    Yes   Sun   Dinner\n",
+            "211       25.89   5.16    Male    Yes   Sat   Dinner\n",
+            "181       23.33   5.65    Male    Yes   Sun   Dinner\n",
+            "183       23.17   6.50    Male    Yes   Sun   Dinner\n",
+            "170       50.81  10.00    Male    Yes   Sat   Dinner\n",
+            "\n",
+            "[244 rows x 6 columns]\n",
+            "   total_bill   tip     sex smoker  day udf_time smoker_value\n",
+            "0       16.99  1.01  Female     No  Sun   Dinner    No_ Value\n",
+            "1       10.34  1.66    Male     No  Sun   Dinner    No_ Value\n",
+            "2       21.01  3.50    Male     No  Sun   Dinner    No_ Value\n",
+            "3       23.68  3.31    Male     No  Sun   Dinner    No_ Value\n",
+            "4       24.59  3.61  Female     No  Sun   Dinner    No_ Value\n",
+            "sex\n",
+            "Male      157\n",
+            "Female     87\n",
+            "Name: total_bill, dtype: int64\n",
+            "sex\n",
+            "Male      3256.82\n",
+            "Female    1570.95\n",
+            "Name: total_bill, dtype: float64\n"
           ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "total_bill    0\n",
-              "tip           0\n",
-              "sex           0\n",
-              "smoker        0\n",
-              "day           0\n",
-              "time          0\n",
-              "dtype: int64"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 135
         }
       ]
     },
@@ -919,12 +976,13 @@
     {
       "cell_type": "code",
       "source": [
-        "import sqlalchemy\n",
+        "from  sqlalchemy import create_engine\n",
         "\n",
-        "conn_String = 'postgres:{username}:{pass}@{host}:{pass}/{db_name}'\n",
+        "conn = create_engine('postgres:{username}:{pass}@{host}:{pass}/{db_name}')\n",
         "\n",
-        "pd.read_sql('select * from tbl', con=conn_String)\n",
+        "df = pd.read_sql('select * from tbl', con=conn)\n",
         "\n",
+        "df.to_sql('new_table', index=False, con=conn)\n",
         "# Create connection, cursor and then execute queries using cursor( cur = conn.cursor()) # curr.execute('select * from table') \n",
         "#res = curr.fecthone(), curr.fetchall(), conn.commit() # curr.close() # conn.close()"
       ],
