--- a/Sai_Learning.ipynb
+++ b/Sai_Learning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Sai Learning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNcHEg34MVAwyEhUaD7CzGy",
+      "authorship_tag": "ABX9TyNPSvwvWmo8rspvrzWMIsVG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 189,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rmIyGt4Qnmqp",
-        "outputId": "d288faa8-b957-4d8e-de2c-bb007ab04ad7"
+        "outputId": "58a0b10c-7f7f-49fb-d787-2d46001b1775"
       },
       "outputs": [
         {
@@ -57,6 +57,7 @@
             "a\n",
             "d\n",
             "a,b,c,d\n",
+            "1,2,3,4\n",
             "{1}\n",
             "{1, 2}\n",
             "{2}\n",
@@ -95,10 +96,11 @@
         "print(max(l)) # returns the max based on ascii if it is character --> d\n",
         "# print(sum(l)) --> if the elements are int or float then it returns the sum, for string it rreturns error\n",
         "print(','.join(['a', 'b', 'c', 'd'])) # converts list to a string based on the delimiter # a,b,c,d\n",
-        "\n",
+        "print(','.join([str(i) for i in  [1, 2, 3, 4]]))\n",
         "\n",
         "## set\n",
         "a = set() # Empty set\n",
+        "list1 = list(set([1,2,2,3]))\n",
         "a.add(1)\n",
         "a.add(2)\n",
         "b = set()\n",
@@ -134,9 +136,11 @@
         "  print(args) # prints ('a','b','c')\n",
         "  print(kwargs) # prints {'input':'a', 'output' :'b'}\n",
         "\n",
+        "print(func('a','b','c',input='a', output='b'))\n",
+        "\n",
         "l = [1,2,3,4,5,6,7,8]\n",
         "iterator = iter(l)\n",
-        "print(next(iterator))\n",
+        "print(next(iterator)) # value print\n",
         "print('here')\n",
         "for i in iterator:\n",
         "  print(i) # Stop iteration is already handled in loop \n",
@@ -146,11 +150,21 @@
         "\n",
         "# map, filter, reduce\n",
         "from functools import reduce\n",
+        "\n",
+        "\n",
         "print(list(map(lambda x:x*2,l)))\n",
         "print(list(filter(lambda x:x%2 == 0, l)))\n",
         "print(reduce(lambda x, y: x+y,l) )\n",
         "\n",
         "# generators\n",
+        "# iterators\n",
+        "\n",
+        "\n",
+        "def func1(list1):\n",
+        "  if i == 1:\n",
+        "    return 1\n",
+        "\n",
+        "\n",
         "def func1(list1):\n",
         "  for i in list1:\n",
         "    yield i \n",
@@ -226,6 +240,32 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "# try, else, finally\n",
+        "def func():\n",
+        "  try:\n",
+        "    print('Inside try block')\n",
+        "    a = 1/0\n",
+        "  except Exception as e:\n",
+        "    print(e)\n",
+        "    print('inside Exception')\n",
+        "  else:\n",
+        "    print(\"Contents here will be printed if the program doesn't go to exception block\")\n",
+        "  finally:\n",
+        "    print('Inside the finally block')\n",
+        "\n",
+        "\n",
+        "func()"
+      ],
+      "metadata": {
+        "id": "FdRDk8MmMsSG"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# exception handling\n",
         "class SaiException(Exception):\n",
         "  print('Hi here')\n",
@@ -244,6 +284,7 @@
         "def func():\n",
         "  try:\n",
         "    print('Inside try block')\n",
+        "    a = 1/0\n",
         "  except Exception as e:\n",
         "    print(e)\n",
         "    print('inside Exception')\n",
@@ -251,7 +292,7 @@
         "    print(\"Contents here will be printed if the program doesn't go to exception block\")\n",
         "  finally:\n",
         "    print('Inside the finally block')\n",
-        "  \n",
+        "\n",
         "\n",
         "# assert\n",
         "def test_something():\n",
